--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
   
 }
@@ -58,4 +58,4 @@ button{
   color: white;
   font-size: 20px;
   border-radius: 8px;
-}
+} */
